--- a/src/styles/room.scss
+++ b/src/styles/room.scss
@@ -73,6 +73,7 @@
                     }
 
                     span{
+                        margin-left: 8px;
                         font-size: 14px;
                         color: #737380;
                         font-weight: 500;
