--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -3,10 +3,23 @@
     border-radius: 8px;
     box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
     padding: 24px;
+    margin-top: 30px;
 
     & + .question{
         margin-top: 8px;
     }
+    &.highlighted {
+        background: #F4F0FF;
+        border: 1px solid #835AFD;
+    
+        footer .user-info span {
+          color: #29292E;
+        }
+      }
+    
+      &.answered {
+        background: #DBDCDD;
+      }
 
     p{
         color: #29292e;
@@ -56,6 +69,11 @@
                 filter: brightness(0.7);
             }
         }
+
+        .user-icon{
+            cursor: pointer;
+            display: flex;
+            gap: 10px;
+        }
     }
 }
-
